Fix a few minor layout issues on mobile
- Clean up footer
- Fix up team call-to-action button to fit
- Logo was slightly too wide on login page
- Add footer links

--- a/app/assets/stylesheets/login.css.scss
+++ b/app/assets/stylesheets/login.css.scss
@@ -60,8 +60,8 @@ body.login {
     background-image: image-url('seatshare-inverted.svg');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 300px 100px;
-    width: 300px;
+    background-size: 290px 100px;
+    width: 290px;
     height: 100px;
     text-align: center;
     margin-left: auto;
@@ -71,7 +71,7 @@ body.login {
 
   div.logo a {
     display: block;
-    width: 300px;
+    width: 290px;
     padding-top: 100px;
   }
 }
